# money-mirror

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.cursor/rules/: clarification.mdc
auth/: __init__.py  authenticate.py
cloud_function/: Dockerfile  README.md  deploy.sh  main.py  requirements.txt
cloud_function/src/: __init__.py  bigquery_manager.py  data_processor.py  file_processor.py  gemini_enricher.py
dbt_project/: dbt_project.yml
dbt_project/models/: sources.yml
dbt_project/models/marts/dashboard/: mart_transactions.sql
dbt_project/models/raw/: raw_amex_transactions.sql  raw_wealthsimple_transactions.sql
dbt_project/models/staging/: stg_all_transactions.sql  stg_amex_transactions.sql  stg_wealthsimple_transactions.sql
