[project]
name = "personal-finance-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dbt-bigquery>=1.9.2",
    "dbt-core>=1.9.6",
    "extra-streamlit-components>=0.1.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-storage>=2.0.0",
    "PyJWT>=2.0.0",
    "polars>=1.30.0",
    "streamlit>=1.45.1",
]
